# Mymath

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-run.yml  learn-github-actions.yml
include/mymath/: add.h
src/: add.cc
test/: CMakeLists.txt  test.cc
